<resources>
    <!--application name displayed in the launcher -->
    <string name="app_name">JavaXpert</string>

    <string name="app_logo">App Logo</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_high_scores">High Scores</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_results">Results</string>
    <string name="title_true_or_false">True or False</string>
    <string name="menu_button_desc">Return to main menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>