<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.javaquizapp.StartFragment"
        android:label="Start"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.javaquizapp.MenuFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_navigation_home_to_navigation_quiz"
            app:destination="@id/navigation_quiz" />

        <action
            android:id="@+id/action_navigation_home_to_navigation_true_or_false"
            app:destination="@id/navigation_true_or_false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.javaquizapp.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.javaquizapp.MultipleChoiceFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_multiple_choice">
        <action
            android:id="@+id/action_navigation_quiz_to_navigation_results"
            app:destination="@id/navigation_results" />
        <action
            android:id="@+id/action_navigation_quiz_to_navigation_menu"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_true_or_false"
        android:name="com.example.javaquizapp.TrueOrFalseFragment"
        android:label="@string/title_true_or_false"
        tools:layout="@layout/fragment_true_or_false">
        <action
            android:id="@+id/action_navigation_true_or_false_to_navigation_results"
            app:destination="@id/navigation_results" />
        <action
            android:id="@+id/action_navigation_true_or_false_to_navigation_menu"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.example.javaquizapp.ResultsFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results">
        <action
            android:id="@+id/action_navigation_results_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>
